[package]
name = "rue"
version = "0.1.0"
edition = "2021"
authors = ["Jack Bass"]
license = "MIT"
repository = "https://github.com/bassj/rue"

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
nom_preserve = { version = "0.1.0", git = "https://github.com/bassj/nom_preserve" }
colored = "2.0.0"
itertools = "0.10.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }